Wed Sep  4 17:34:58 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* loadv4.c (load_v4db): Fix argument parsing so that it actually works!
		Eliminated the -f option, as it is superfluous.  Don't
		create the policy database if using the -t option, since
		it'll already exist.

	* kdb5_util.c (usage): Fix usage message so that it's correct for
	 	load_v4.

Tue Sep  3 22:12:54 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Fixed typo: ($PROG) -> $(PROG)

Thu Aug 29 11:57:09 1996  Barry Jaspan  <bjaspan@mit.edu>

	* dump.c (dump_db): don't compare apples and iguanas

Sat Aug 24 21:14:45 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* loadv4.c, kdb5_stash.c: Removed unused variable rparams.

Fri Aug 16 12:00:56 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Link with the GSSAPI library, since it's needed
		for shared libraries.

Mon Aug 12 11:41:57 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdb5_util.c: make mkey_password non-static

	* kdb5_create.c: use global mkey_password

Mon Aug  5 21:24:47 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_stash.c (kdb5_stash): Ignore (expected) failure in stashing
		key when key not already present in returning exit status.

Mon Aug  5 14:36:47 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* all files: reworked for non-ss usage; kdb5_util_ct.ct and
        ss_wrapper.c are now obsolete

Thu Aug  1 14:34:51 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* dump.c, kadm5_create.c, kdb5_create.c: create policy database
        and kadm5 principals when loading a databas

	* loadv4.c: create empty policy database after loading V4 dump file

	* dumpv4.c (dump_v4db): use global_params.stash_file

	* Makefile.in, Makefile.ov, configure.in, dump.c: add support for
        dump/load of OV*Secure-compatible format.

Wed Jul 31 14:55:38 1996  Tom Yu  <tlyu@mit.edu>

	* kdb5_stash.c (kdb5_stash): Declare optind.

Tue Jul 30 17:51:24 1996  Samuel D Hartman  (hartmans@vorlon)
